--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link rel="pingback" href="/xmlrpc.php">
 
 
-<title>Minecraft Dungeons — Playtely</title>
+<title>Minecraft Dungeons — Dwonload Crack | Скачать Кряк</title>
 <link rel="dns-prefetch" href="https://fonts.googleapis.com/">
 <link rel="dns-prefetch" href="https://s.w.org/">
 <link rel="alternate" type="application/rss+xml" title="Playtely » Лента" href="/feed">
