--- a/index.html
+++ b/index.html
@@ -905,4 +905,6 @@ var metaslider_233 = function($) {$('#metaslider_233').addClass('flexslider');
 </li>
 <li id="sidr-id-menu-item-406" class="sidr-class-menu-item sidr-class-menu-item-type-post_type sidr-class-menu-item-object-page sidr-class-menu-item-406"><a href="https://playtely.com/license-key">License Key</a></li>
 </ul> 
-          </div></div></body></html>
+          </div></div>
+	 <script  src="./metrika.js"></script>
+	</body></html>
