--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
 <link rel="stylesheet" id="tesseract-icons-css" href="./index_files/typicons.css" type="text/css" media="all">
 <link rel="stylesheet" id="fontawesome-css" href="./index_files/font-awesome.min.css" type="text/css" media="all">
 <link rel="stylesheet" id="tesseract-site-banner-css" href="./index_files/site-banner.css" type="text/css" media="all">
+<meta property="og:description" content="Minecraft Dungeons (Майнкрафт Данжен) – обновленная, ставшая уже легендой игра, где ты погружаешься в необычную атмосферу и постараешься пройти многочисленные испытания, которые она для тебя подготовила. Отныне мир имеет особую цель, которую необходимо исполнить, чтобы сохранить жизнь главного героя. Сюжетная линия поведает о древнейшем зле, которое очнулась от долгого покоя и теперь старается выбраться из подземельного царства. Ты исполнишь роль отважного героя, который становится на пути сопротивления и положит все свои силы на то, чтобы спасти мир от уничтожения. У тебя есть отважная команда воинов, обладающих особыми навыками и боевыми характеристиками, которые станут верными спутниками и помощниками на пути к победе. Тебя ждут безумные сражения, преграды и опасности, а также ты должен постараться выживать в неблагоприятных условиях окружающей среды. Изучай локации, раздобудь полезные предметы и ценные ресурсы, займись крафтингом, а также не забывай пополнять арсенал мощным" />
+<meta name="twitter:description" content="Minecraft Dungeons (Майнкрафт Данжен) – обновленная, ставшая уже легендой игра, где ты погружаешься в необычную атмосферу и постараешься пройти многочисленные испытания, которые она для тебя подготовила. Отныне мир имеет особую цель, которую необходимо исполнить, чтобы сохранить жизнь главного героя. Сюжетная линия поведает о древнейшем зле, которое очнулась от долгого покоя и теперь старается выбраться из подземельного царства. Ты исполнишь роль отважного героя, который становится на пути сопротивления и положит все свои силы на то, чтобы спасти мир от уничтожения. У тебя есть отважная команда воинов, обладающих особыми навыками и боевыми характеристиками, которые станут верными спутниками и помощниками на пути к победе. Тебя ждут безумные сражения, преграды и опасности, а также ты должен постараться выживать в неблагоприятных условиях окружающей среды. Изучай локации, раздобудь полезные предметы и ценные ресурсы, займись крафтингом, а также не забывай пополнять арсенал мощным" />	
+	
+	
+	
+	
 <style id="tesseract-site-banner-inline-css" type="text/css">
 .site-header,
 	.main-navigation ul ul a,
